Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Fixed
-
5.9.0 Beta 3, 5.9.0
-
None
-
9e34b54f38102177cfd2400e275d5dcaa39afb50 f1829a24d4 (qt/qtmultimedia/dev) d90207f88b (qt/qtmultimedia/6.3) d90207f88b (qt/tqtc-qtmultimedia/6.3) 1296351d60 (qt/tqtc-qtmultimedia/5.15) d90207f88b (qt/tqtc-qtmultimedia/6.3.1)
Description
When running the demo examples/speech/hello_speak/hello_speak,
selecting the speechd engine works, but if I select flite I get no sound and errors on the console:
qt.speech.tts.flite: processText() begin QAudioOutput(pulseaudio): pa_stream_begin_write, error = Invalid argument QAudioOutput(pulseaudio): pa_stream_begin_write, error = Invalid argument QAudioOutput(pulseaudio): pa_stream_begin_write, error = Invalid argument QAudioOutput(pulseaudio): pa_stream_begin_write, error = Invalid argument QAudioOutput(pulseaudio): pa_stream_begin_write, error = Invalid argument QAudioOutput(pulseaudio): pa_stream_begin_write, error = Invalid argument ... qt.speech.tts.flite: "Audio error (2)" qt.speech.tts.flite: processText() end hello_speak: ../nptl/pthread_mutex_lock.c:361: __pthread_mutex_lock_full: Assertion `robust || (oldval & FUTEX_OWNER_DIED) == 0' failed.
The last few lines only appeared when I closed the application.